--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -29,9 +29,7 @@
             <td class="table-cell p-3 text-center">GET</td>
             <td class="table-cell p-3">Gets a list of cats' names and ids</td>
             <td class="table-cell p-3">
-              <a href="/cats" target="_blank" class="text-blue-700"
-                >List Cats</a
-              >
+              <a href="/cats" target="_blank" class="text-blue-700">List Cat</a>
             </td>
           </tr>
           <tr class="border-2">
@@ -41,7 +39,7 @@
               Returns the detail about the cat matching the id in the parameter
             </td>
             <td class="table-cell p-3">
-              <a href="/cats/1" target="_blank" class="text-blue-700"
+              <a href="/cat/1" target="_blank" class="text-blue-700"
                 >Get Cat 1</a
               >
             </td>
