--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="bg-gray-700 text-white p-4">
-      <h1 class="text-lg font-semibold">Zodiac</h1>
+      <h1 class="text-lg font-semibold">Cats</h1>
     </header>
     <main class="p-4 w-1/2 m-auto">
       This API uses a list of Cartoon Cats signs as its resource. The routes are
@@ -25,11 +25,11 @@
         </thead>
         <tbody class="table-row-group">
           <tr class="border-2">
-            <td class="table-cell p-3"><pre>/cats</pre></td>
+            <td class="table-cell p-3"><pre>/cat</pre></td>
             <td class="table-cell p-3 text-center">GET</td>
             <td class="table-cell p-3">Gets a list of cats' names and ids</td>
             <td class="table-cell p-3">
-              <a href="/cats" target="_blank" class="text-blue-700">List Cat</a>
+              <a href="/cat" target="_blank" class="text-blue-700">List Cat</a>
             </td>
           </tr>
           <tr class="border-2">
